--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,8 @@
 .vscode/c_cpp_properties.json
 .vscode/launch.json
 .vscode/ipch
+include/README
+test/README
+.vscode/extensions.json
+.vscode/settings.json
+lib/README
